[package]
name = "oxide_plus"
version = "0.1.0"
edition = "2024"

[dependencies]
freya = { git = "https://github.com/marc2332/freya", branch = "a-new-begining", features = [
    "remote-asset",
] }
freya-router = { git = "https://github.com/marc2332/freya", branch = "a-new-begining" }
freya-radio = { git = "https://github.com/marc2332/freya", branch = "a-new-begining" }
freya-icons = { git = "https://github.com/marc2332/freya", branch = "a-new-begining", features = [
    "lucide",
] }
rustplus_rs = { path = "./rustplus_rs" }
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"
bytes = "1.10.1"
blocking = "1.6.2"
ureq = "3.1.2"
dirs = "6.0.0"
image = "0.25.8"
chrono = "0.4.42"
timeago = "0.5.0"
regex = "1.12.2"
