[package]
name = "oxide_plus"
version = "0.2.0"
edition = "2024"

[dependencies]
freya = { git = "https://github.com/marc2332/freya", branch = "chore/remove-send-bound-for-event-loop-callbacks", features = ["radio", "router", "tray", "webview"] }
freya-icons = { git = "https://github.com/marc2332/freya", branch = "chore/remove-send-bound-for-event-loop-callbacks", features = ["lucide"] }
openssl = { version = "0.10", features = ["vendored"] }
futures-channel = "0.3.31"
futures-lite = "2.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
fc = "0.0.1"
fcm_receiver_rs = { git = "https://github.com/Drigster/fcm_receiver.rs" }
ureq = { version = "3.1.4", features = ["json"] }
uuid = { version = "1.20.0", features = ["v4"] }
image = "0.25.9"
blocking = "1.6.2"
rustplus_rs = { path = "./rustplus_rs" }
async-std = "1.13.2"
http = "1.4.0"
chrono = "0.4.43"
timeago = "0.5.0"
regex = "1.12.2"
capitalize = "0.3.4"
euclid = "0.22.13"
