[package]
name = "rustplus_rs"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust library for controlling Smart Switches in the PC game Rust"
license = "MIT"
repository = "https://github.com/yourusername/rustplus_rs"
keywords = ["rust", "rust+", "rustplus", "rustplus-api", "companion", "api", "websocket", "smart-switch", "smart-alarm", "team-chat"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Protobuf support
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and utilities
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Image processing for camera frames
image = "0.24"
bytemuck = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# URL parsing
url = "2.0"

[build-dependencies]
prost-build = "0.12"